refactor(770): replace last used sorting with priority-based sorting
- Updated `GeocodeServiceJdbcService` to remove `findByEnabledTrueOrderByLastUsedAsc`.
- Added `findByEnabledTrueOrderByPriority` and updated method references.
- Adjusted related test cases to reflect the priority-based sorting logic.